mule-user-guide/v/3.4/installing.adoc
= 安装

==  Mule安装程序
.  link:/mule-user-guide/v/3.4/hardware-and-software-requirements[检查硬件和软件要求。]
.  link:/mule-user-guide/v/3.4/downloading-and-launching-mule-esb[下载，然后启动Mule。]
.  link:/mule-user-guide/v/3.4/adding-community-runtime[将社区运行时添加到Mule Studio]（_optional_）。
.  link:/mule-user-guide/v/3.4/installing-an-enterprise-license[安装企业许可证]（_optional_）。
.  link:/mule-user-guide/v/3.4/installing-extensions[用插件，模块，运行时和连接器扩展Mule]（_optional_）。

== 我正在使用哪个版本的Mule？

已经安装了Mule？以下过程概述了*Mule Studio*和*Mule Standalone*中确定Mule运行时版本号的步骤。

[tabs]
------
[tab,title="Studio"]
....
This procedure assumes that you have already launched Mule Studio and have opened a new or existing project. If you have not yet opened your first project in Studio, click *File* > *New* > *Mule Project*, and observe the default value in the *Server Runtime* field in the wizard.

. In the *Package Explorer*, click the expand arrow next to the name of one of your projects to expand the folder.
+
image:expand_arrow.png[expand_arrow]

. Double-click the `mule-project.xml` file to open it in a new tab in the canvas.

. Note the *Server Runtime* version in the *Runtime* column at right.
+
image:runtime.png[runtime]
....
[tab,title="Standalone"]
....
. Run Mule standalone from the command line.

[TIP]
====
 Need More Detail?
.. Open a new command line.  +
*PC*: Open the *Console*.  +
*Mac*: Open the *Terminal* application (Applications > Utilities > Terminal).
.. Access the directory and folder in which downloaded Mule. For example, type +
`cd /Users/aaron/Downloads/mule-standalone-3.3.1/`
.. Start Mule. For example, type +
`./bin/mule`
====

. After Mule starts, scroll up in the command line window to find the  `Mule ESB and Integration Platform`  where Mule displays the version.
+
image:standalone.png[standalone]
....
------
