mule-user-guide/v/3.5/installing.adoc
= 安装

==  Mule安装程序

. 检查 link:/mule-user-guide/v/3.5/hardware-and-software-requirements[硬件和软件要求]。
. 下载，然后启动 link:https://www.mulesoft.com/platform/studio[Anypoint Studio]
. 将 link:https://www.mulesoft.com/lp/dl/mule-esb-enterprise[社区运行时]添加到Anypoint Studio _（可选）_。
. 安装企业许可证_（可选）_。
. 使用插件，模块，运行时和连接器_（可选）_扩展Mule。

== 我正在使用哪个版本的Mule？

已经安装了Mule？以下过程概述了*Anypoint Studio*和*Mule Standalone*中确定Mule运行时版本号的步骤。

[tabs]
------
[tab,title="Studio"]
....
This process assumes that you have already launched Studio and have opened a new or existing project. IF you have not yet opened your first project in Studio, click *File > New > Mule Project*, and observe the default value in the *Server Runtime* field in the wizard.

. In the *Package Explorer*, click the expand arrow next to the name of one of your projects to expand the folder.
+
image:expand_arrow.png[expand_arrow]

. Double click the `mule-project.xml` file to open in a new tab in the canvas.

. Note the *Server Runtime* version in the *Runtime* column at right.
+
image:runtime.png[runtime]
....
[tab,title="Standalone"]
....
. Run Mule standalone from the command line.
+

[TIP]
====
Need more Detail?

.. Open a new command line.
+
*Windows*: Open the *Console*.
+
*Mac*: Open the *Terminal* application (Applications > Utilities > Terminal).

.. Access the directory and folder in which downloaded Mule. For example, type `cd /User/aaron/Downloads/mule-standalone-3.3.1/`.

.. Start Mule. For example, tpe `.bin/mule`.
====

. After Mule starts, scroll up in the command line window to find the `Mule ESB and Integration Platform` where Mule displays the version.
+
image:standalone.png[standalone]

....
------

== 安装较新或较旧的运行时

[tabs]
------
[tab,title="Community Users"]
....
Community users can obtain the latest version of Mule Community from 

The link:https://www.mulesoft.com/platform/studio[Anypoint Studio downloads page] includes the latest version of the Mule Enterprise runtime. You can also add the link:https://www.mulesoft.com/lp/dl/mule-esb-enterprise[Community Runtime] to your instance of Studio. When you create new projects or import projects, Studio prompts you to select the runtime you want to deploy your project.

[TIP]
To download the latest *Mule Standalone runtime* _without_ Anypoint Studio, scroll down to the table on the Downloads page under the heading *Previous ESB Versions*.

To download a previous Standalone runtime version of Mule, scroll down further on the Downloads page to the section titled *Previous ESB Versions*.
....
[tab,title="Enterprise Customers"]
....
Enterprise customers can obtain all versions of all Mule products on the MuleSoft Customer Portal.

After logging in, navigate to the *Downloads* tab where the most recent versions of Anypoint Studio, Mule Standalone, Mule Management Console, and the SAP transport are listed.

The latest version of *Anypoint Studio* includes runtime version 3.5.0. See Installing Extensions for instructions on how to add other Mule runtime versions into your Studio instance. When you create new projects or import projects into Studio, you can select the runtime on which you want to deploy your project.

To access previous version of any MuleSoft product, click the *Content* tab, then search for the product to see all of its versions and associated downloads.
....
------
